--- a/index.html
+++ b/index.html
@@ -74,12 +74,9 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Jesse Royalty</h1>
-                        <h3>A Template by Start Bootstrap</h3>
+                        <h3>Data Scientist</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
-                            <li>
-                                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                            </li>
                             <li>
                                 <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                             </li>
