--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                    <h2 class="section-heading">Social Media Sentiment Analysis:<br>Major Airlines</h2>
+                    <p class="lead">This project explores the classification of the sentiment of tweets directed at major airlines as an example of how machine learning can leverage data from social networks to make data-driven business decisions.
+My method uses natural language processing with TFIDF and a ‘bag of words’ approach fed into clustering and classification models.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/dog.png" alt="">
