--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Job Recommendation Engine:<br>Client Project</h2>
                     <p class="lead">A local start up asked for a job and skills recommendation engine to help give users an idea of what they can do to change their career. <br />
+                      <br />
                       Text scrubbing and cleaning was followed by TFIDF vectorization to extract relevant text features from user job descriptions and skills.
                       In this case we are comparing the text features between different unique job titles. The job titles are first clustered using agglomerative hierarchical clustering in order to loosely represent industries.
                       A new user is assigned to a cluster using multinomial logistic regression and then recommended job titles from each of the clusters using cosine similarity comparison.
@@ -131,7 +132,8 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Social Media Sentiment Analysis:<br>Major Airlines</h2>
-                    <p class="lead">This project explores the classification of the sentiment of tweets directed at major airlines as an example of how machine learning can leverage data from social networks to make data-driven business decisions.<br><br>
+                    <p class="lead">This project explores the classification of the sentiment of tweets directed at major airlines as an example of how machine learning can leverage data from social networks to make data-driven business decisions.<br />
+                      <br />
 My method uses natural language processing with TFIDF and a ‘bag of words’ approach fed into clustering and classification models.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
