--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
                       Text scrubbing and cleaning was followed by TFIDF vectorization to extract relevant text features from user job descriptions and skills.
                       In this case we are comparing the text features between different unique job titles. The job titles are first clustered using agglomerative hierarchical clustering in order to loosely represent industries.
                       A new user is assigned to a cluster using multinomial logistic regression and then recommended job titles from each of the clusters using cosine similarity comparison.
-                      We are also able to suggest the most common skills necessary for that job title</p>
+                      We are also able to suggest the most common skills necessary for that job title.<br />
+                    <a target="_blank" href="http://fontawesome.io">View the code</a></p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/ipad.png" alt="">
@@ -134,7 +135,8 @@
                     <h2 class="section-heading">Social Media Sentiment Analysis:<br>Major Airlines</h2>
                     <p class="lead">This project explores the classification of the sentiment of tweets directed at major airlines as an example of how machine learning can leverage data from social networks to make data-driven business decisions.<br />
                       <br />
-My method uses natural language processing with TFIDF and a ‘bag of words’ approach fed into clustering and classification models.</p>
+                      My method uses natural language processing with TFIDF and a ‘bag of words’ approach fed into clustering and classification models.<br />
+                      <a target="_blank" href="http://fontawesome.io">View the code</a></p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/dog.png" alt="">
