--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                       In this case we are comparing the text features between different unique job titles. The job titles are first clustered using agglomerative hierarchical clustering in order to loosely represent industries.
                       A new user is assigned to a cluster using multinomial logistic regression and then recommended job titles from each of the clusters using cosine similarity comparison.
                       We are also able to suggest the most common skills necessary for that job title.<br />
-                    For more information and the code, click <a target="_blank" href="http://fontawesome.io">here</a></p>
+                    More information and the code can be found at <a target="_blank" href="http://fontawesome.io">this Github repository</a>.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/ipad.png" alt="">
@@ -136,7 +136,7 @@
                     <p class="lead">This project explores the classification of the sentiment of tweets directed at major airlines as an example of how machine learning can leverage data from social networks to make data-driven business decisions.<br />
                       <br />
                       My method uses natural language processing with TFIDF and a ‘bag of words’ approach fed into clustering and classification models.<br />
-                      For more information and the code, click <a target="_blank" href="http://fontawesome.io">here</a></p>
+                      More information and the code can be found at <a target="_blank" href="http://fontawesome.io">this Github repository</a>.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/dog.png" alt="">
