--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#services">Services</a>
+                        <a href="#services">Projects</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
@@ -148,7 +148,7 @@
 
     </div>
     <!-- /.content-section-b -->
-
+<!--
     <div class="content-section-a">
 
         <div class="container">
@@ -166,9 +166,9 @@
             </div>
 
         </div>
-        <!-- /.container -->
+        /.container
 
-    </div>
+    </div> -->
     <!-- /.content-section-a -->
 
 	<a  name="contact"></a>
@@ -216,7 +216,7 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#services">Services</a>
+                            <a href="#services">Projects</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
