--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                         <h1>Jesse Royalty</h1>
                         <h3>Data Scientist</h3>
                         <hr class="intro-divider">
+                        <h3>jesse.royalty@gmail.com</h3>
                         <ul class="list-inline intro-social-buttons">
                             <li>
                                 <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
