--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
                       In this case we are comparing the text features between different unique job titles. The job titles are first clustered using agglomerative hierarchical clustering in order to loosely represent industries.
                       A new user is assigned to a cluster using multinomial logistic regression and then recommended job titles from each of the clusters using cosine similarity comparison.
                       We are also able to suggest the most common skills necessary for that job title.<br />
-                    More information and the code can be found at <a target="_blank" href="https://github.com/jroyalty07/dsi-sea-project07">this Github repository</a>.</p>
+                    More information and the code can be found at <a target="_blank" href="https://github.com/jroyalty07/career-recommendation-engine">this Github repository</a>.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                    <img class="img-responsive" src="img/clustered_titles.png" alt="">
                 </div>
             </div>
 
@@ -138,7 +138,7 @@
                       More information and the code can be found at <a target="_blank" href="https://github.com/jroyalty07/dsi-sea-project07">this Github repository</a>.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                    <img class="img-responsive" src="img/airlines.png" alt="">
                 </div>
             </div>
 
