--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Social Media Sentiment Analysis:<br>Major Airlines</h2>
-                    <p class="lead">This project explores the classification of the sentiment of tweets directed at major airlines as an example of how machine learning can leverage data from social networks to make data-driven business decisions.<br />
+                    <p class="lead">This project explores the sentiment of tweets directed at major airlines as an example of how machine learning can leverage data from social networks to make data-driven business decisions.<br />
                       <br />
                       My method uses natural language processing with TFIDF and a ‘bag of words’ approach fed into clustering and classification models.<br />
                       More information and the code can be found at <a target="_blank" href="https://github.com/jroyalty07/dsi-sea-project07">this Github repository</a>.</p>
