--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                       In this case we are comparing the text features between different unique job titles. The job titles are first clustered using agglomerative hierarchical clustering in order to loosely represent industries.
                       A new user is assigned to a cluster using multinomial logistic regression and then recommended job titles from each of the clusters using cosine similarity comparison.
                       We are also able to suggest the most common skills necessary for that job title.<br />
-                    More information and the code can be found at <a target="_blank" href="https://github.com/jroyalty07/career-recommendation-engine">this Github repository</a>.</p>
+                    Take a loot at our<a target="_blank" href="https://github.com/jroyalty07/career-recommendation-engine">code</a> or our client <a target="_blank" href="https://docs.google.com/presentation/d/1WVKsxtuPchFBn5foV0bCIa-f6DKy-i_-7MDue69OedU/pub?start=false&loop=false&delayms=3000&slide=id.ge9090756a_1_58">presentation</a>!</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/clustered_titles.png" alt="">
@@ -132,7 +132,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Social Media Sentiment Analysis:<br>Major Airlines</h2>
-                    <p class="lead">This project explores the sentiment of tweets directed at major airlines as an example of how machine learning can leverage data from social networks to make data-driven business decisions.<br />
+                    <p class="lead">This project explores git remote add origin https://github.com/jroyalty07/airline-sentiment-analysisthe sentiment of tweets directed at major airlines as an example of how machine learning can leverage data from social networks to make data-driven business decisions.<br />
                       <br />
                       My method uses natural language processing with TFIDF and a ‘bag of words’ approach fed into clustering and classification models.<br />
                       More information and the code can be found at <a target="_blank" href="https://github.com/jroyalty07/dsi-sea-project07">this Github repository</a>.</p>
