--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                       In this case we are comparing the text features between different unique job titles. The job titles are first clustered using agglomerative hierarchical clustering in order to loosely represent industries.
                       A new user is assigned to a cluster using multinomial logistic regression and then recommended job titles from each of the clusters using cosine similarity comparison.
                       We are also able to suggest the most common skills necessary for that job title.<br />
-                    Take a loot at our<a target="_blank" href="https://github.com/jroyalty07/career-recommendation-engine">code</a> or our client <a target="_blank" href="https://docs.google.com/presentation/d/1WVKsxtuPchFBn5foV0bCIa-f6DKy-i_-7MDue69OedU/pub?start=false&loop=false&delayms=3000&slide=id.ge9090756a_1_58">presentation</a>!</p>
+                    Take a look at our <a target="_blank" href="https://github.com/jroyalty07/career-recommendation-engine">code</a> or our client <a target="_blank" href="https://docs.google.com/presentation/d/1WVKsxtuPchFBn5foV0bCIa-f6DKy-i_-7MDue69OedU/pub?start=false&loop=false&delayms=3000&slide=id.ge9090756a_1_58">presentation</a>!</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/clustered_titles.png" alt="">
