--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                         <a href="#services">Projects</a>
                     </li>
                     <li>
+                        <a href="img/resume.pdf">Resume</a>
+                    </li>
+                    <li>
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
