--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a href="#services">Projects</a>
                     </li>
                     <li>
-                        <a href="img/resume.pdf">Resume</a>
+                        <a target="_blank" href="img/resume.pdf">Resume</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
@@ -80,10 +80,10 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a href="https://github.com/jroyalty07" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                                <a target='_blank' href="https://github.com/jroyalty07" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/jroyalty07" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                <a target='_blank' href="https://www.linkedin.com/in/jroyalty07" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                             </li>
                         </ul>
                     </div>
@@ -188,10 +188,10 @@
                             <h4>jesse.royalty@gmail.com</h4>
                         </li>
                         <li>
-                            <a href="https://github.com/jroyalty07" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            <a target='_blank' href="https://github.com/jroyalty07" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/in/jroyalty07" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            <a target='_blank' href="https://www.linkedin.com/in/jroyalty07" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                         </li>
                     </ul>
                 </div>
