--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Social Media Sentiment Analysis:<br>Major Airlines</h2>
-                    <p class="lead">This project explores git remote add origin https://github.com/jroyalty07/airline-sentiment-analysisthe sentiment of tweets directed at major airlines as an example of how machine learning can leverage data from social networks to make data-driven business decisions.<br />
+                    <p class="lead">This project explores git remote add origin the sentiment of tweets directed at major airlines as an example of how machine learning can leverage data from social networks to make data-driven business decisions.<br />
                       <br />
                       My method uses natural language processing with TFIDF and a ‘bag of words’ approach fed into clustering and classification models.<br />
-                      More information and the code can be found at <a target="_blank" href="https://github.com/jroyalty07/dsi-sea-project07">this Github repository</a>.</p>
+                      More information and the code can be found at <a target="_blank" href="https://github.com/jroyalty07/sentiment-analysis-major-airlines">this Github repository</a>.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/airlines.png" alt="">
